# github-sspp-v2

./: 11c1.c  11e1.c  11e2.c  CMakeLists.txt  asdsadsadsad.c  cuda.sub  cuda_temp.sub  cuda_v2 _test1.sub  cuda_v2.sub  main_csr.c  main_cuda_1thread.cu  main_cuda_block_1d.cu  main_cuda_block_2d.cu  main_cuda_block_2d_v2.cu  main_cuda_block_2d_v2_noell.cu  main_cuda_block_2d_v2_unroll.cu  main_cuda_v1.cu  main_cuda_v2.cu  main_cuda_v3.cu  main_cuda_v3_1d_block.cu  main_cuda_v3_1thread.cu  main_cuda_v3_2d_block.cu  main_ellpack_2d.c  main_ellpack_2dt.c  main_ellpack_T.c  main_mv_v1.c  main_mv_v2_omp.c  main_mv_v3_omp.c  main_mv_v4_omp.c  main_omp.c  main_omp_2d_ellpack.c  main_omp_2dt_ellpack_block_unroll.c  main_omp_v2 _temp1.c  main_omp_v2.c  main_omp_v2_MAXNZ.c  main_omp_v2_noell.c  main_omp_v2_unroll.c  main_omp_v2_unroll_CSR.c  omp.sub  omp_all_mtx.sub  (+35 more)
TEMP/: last_error.txt
full1/: main_csr.c  read_csr.c  read_csr.h
full2/: main_csr.c  main_ellpack.c  read_ellpack.c  read_ellpack.h
full3/: main_csr.c  main_ellpack.c  main_mv_v3_omp.c  read_csr.c  read_csr.h  read_ellpack.h
full4/: CMakeLists.txt  main_cuda_v2.cu  main_cuda_v3.cu  main_cuda_v3_1d_block.cu  main_cuda_v3_1thread.cu  main_cuda_v3_2d_block.cu  questino2.txt  question.txt  temp.txt
full5/: main_cuda_block_2d.cu
full6/: main_cuda_block_2d_v2 copy 2.cu  main_cuda_block_2d_v2 copy 3.cu  main_cuda_block_2d_v2 copy.cu  main_cuda_block_2d_v2_copy 3.cu  main_omp_2dt_ellpack copy.c  read_ellpack_2dt.c
full7_all/: cuda_matAll_8_8.sub  cuda_temp.sub  cuda_v2.sub  main.c  main_cuda_1thread.cu  main_omp.c  (+10 more)
(+59 files in other folders)
